--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -67,21 +67,21 @@
     <Compile Include="Assets\Scripts\Controller\ButtonControl.cs" />
     <Compile Include="Assets\Scripts\Controller\ButtonListButton.cs" />
     <Compile Include="Assets\Scripts\Controller\CharacterMovement.cs" />
-    <Compile Include="Assets\Scripts\Controller\CharacterPick.cs" />
     <Compile Include="Assets\Scripts\Controller\ClickButtons.cs" />
     <Compile Include="Assets\Scripts\Controller\CreatePub.cs" />
     <Compile Include="Assets\Scripts\Controller\Creator.cs" />
     <Compile Include="Assets\Scripts\Controller\DragBuilding.cs" />
+    <Compile Include="Assets\Scripts\Controller\Events.cs" />
     <Compile Include="Assets\Scripts\Controller\GridController.cs" />
     <Compile Include="Assets\Scripts\Controller\GridFieldController.cs" />
     <Compile Include="Assets\Scripts\Controller\PathNode.cs" />
     <Compile Include="Assets\Scripts\Controller\Pathfinding.cs" />
+    <Compile Include="Assets\Scripts\Controller\PickEvents.cs" />
+    <Compile Include="Assets\Scripts\Controller\PickObjects.cs" />
     <Compile Include="Assets\Scripts\Controller\UnitOperations.cs" />
     <Compile Include="Assets\Scripts\Models\BuildingModel.cs" />
     <Compile Include="Assets\Scripts\Models\BuildingProcessor.cs" />
     <Compile Include="Assets\Scripts\Models\CreatorAbstract.cs" />
-    <Compile Include="Assets\Scripts\Models\Events.cs" />
-    <Compile Include="Assets\Scripts\Models\PickEvents.cs" />
     <Compile Include="Assets\Scripts\Models\UnitProcessor.cs" />
     <Compile Include="Assets\Scripts\Models\buildingKind.cs" />
     <Compile Include="Assets\Scripts\View\GridMap.cs" />
